--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,3 +1,5 @@
+@import './vars';
+
 * {
   margin: 0;
   padding: 0;
@@ -6,6 +8,7 @@
 
 html {
   font-size: 62.5%;
+  font-family: $font-lato;
 }
 
 body {
