--- a/src/assets/styles/containers/SidebarCoach.scss
+++ b/src/assets/styles/containers/SidebarCoach.scss
@@ -1,8 +1,11 @@
 .SidebarCoach {
   &-container {
+    grid-area: sidebar;
+    position: fixed;
     width: 20vw;
     height: calc(100vh - 70px);
     background-color: rgba(83, 83, 83, .6);
+    top: 70px;
   }
   &-item {
     display: flex;
