--- a/src/assets/styles/containers/TableStatusVacancies.scss
+++ b/src/assets/styles/containers/TableStatusVacancies.scss
@@ -4,12 +4,12 @@
   &-container {
     display: grid;
     width: 70vw;
-    grid-template-areas: "header" "content";
+    grid-template-areas: "headerTable" "contentTable";
     grid-template-rows: 80px auto;
     background-color: lightgray;
   }
   &-header {
-    grid-area: header;
+    grid-area: headerTable;
     display: grid;
     grid-template-areas: "vtitle stitle";
     grid-template-columns: 65% 35%;
@@ -23,20 +23,20 @@
     }
   }
   &-content {
-    grid-area: content;
+    grid-area: contentTable;
     display: grid;
-    grid-template-areas: "vacancies status";
+    grid-template-areas: "vacanciesTable statusTable";
     grid-template-columns: 65% 35%;
     &--left,
     &--right {
       padding: 20px 0;
     }
     &--left {
-      grid-area: vacancies;
+      grid-area: vacanciesTable;
       border-right: 1px solid rgba(83, 83, 83, .5);;
     }
     &--right {
-      grid-area: status;
+      grid-area: statusTable;
     }
   }
   &-statusItem {
