--- a/src/assets/styles/_sidebarMenu.scss
+++ b/src/assets/styles/_sidebarMenu.scss
@@ -1,7 +1,7 @@
 .sidebarmenu_container {
   grid-area: sidebar;
   position: fixed;
-  width: 20vw;
+  width: 20%;
   height: calc(100vh - 70px);
   background-color: rgba(83, 83, 83, .6);
   top: 70px;
