--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -22,7 +22,7 @@ body {
 #app {
   display: grid;
   grid-template-areas: "header header" "sidebar content";
-  grid-template-columns: 20vw 80vw;
+  grid-template-columns: 20% 80%;
   grid-template-rows: 70px auto;
 }
 
@@ -31,4 +31,10 @@ main {
   &.isCoach {
     grid-area: 2 / 1 / 2 / 3;
   }
+}
+
+.VacanciesApplied-title {
+  margin: 30px 0;
+  font-size: $font-bebas;
+  text-align: center;
 }
