--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -30,11 +30,55 @@ main {
   grid-area: content;
   &.isCoach {
     grid-area: 2 / 1 / 2 / 3;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.Home {
+  &-list {
+    &-vacancies,
+    &-alumns {
+      display: flex;
+      flex-direction: column;
+      background-color: lavender;
+      margin: 2.5%;
+      h2 {
+        margin: 15px 20px;
+      }
+    }
+    &-vacancies {
+      width: 55%;
+    }
+    &-alumns {
+      width: 35%;
+    }
+  }
+  &-search {
+    display: flex;
+    width: 85%;
+    min-height: 70px;
+    margin: 30px auto 40px;
+    padding: 20px;
+    border-bottom: 1px solid rgba(83, 83, 83, .6);
+    place-content: center;
+    input {
+      border: none;
+      box-shadow: 0 0 5px rgba(110, 110, 110, .5);
+      border-radius: 4px;
+      height: 40px;
+      width: 550px;
+      text-indent: 1rem;
+      &::placeholder {
+        font-family: $font-lato;
+        font-size: 1.6rem;
+      }
+    }
   }
 }
 
 .VacanciesApplied-title {
   margin: 30px 0;
-  font-size: $font-bebas;
+  font-family: $font-bebas;
   text-align: center;
 }
