--- a/src/assets/styles/components/HeaderVacancy.scss
+++ b/src/assets/styles/components/HeaderVacancy.scss
@@ -22,11 +22,11 @@
 
   &-sectionOne {
     h2 {
-      font-size: 26px;
+      font-size: 2.6rem;
       margin-right: 20px;
     }
     h3 {
-      font-size: 20px;
+      font-size: 2rem;
     }
   }
   &-sectionTwo {
