--- a/src/assets/styles/components/VacancyCard.scss
+++ b/src/assets/styles/components/VacancyCard.scss
@@ -21,11 +21,11 @@
     }
   }
   &-title {
-    font-size: 24px;
+    font-size: 2.4rem;
     font-weight: 700;
   }
   &-company {
-    font-size: 18px;
+    font-size: 1.8rem;
   }
   &-footer {
     display: flex;
