--- a/src/assets/styles/containers/VacanciesList.scss
+++ b/src/assets/styles/containers/VacanciesList.scss
@@ -17,7 +17,7 @@
     align-items: center;
     justify-content: space-around;
     p {
-      font-size: 20px;
+      font-size: 2rem;
     }
     button {
       width: 120px;
