[Update] Vacancy and VacancyStatus

--- a/src/assets/styles/components/HeaderVacancy.scss
+++ b/src/assets/styles/components/HeaderVacancy.scss
@@ -3,7 +3,7 @@
 .HeaderVacancy {
   &-container {
     display: flex;
-    width: 80vw;
+    width: 100%;
     height: 180px;
     padding: 15px;
     background-color: rgba(93, 93, 93, .6);
