--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -77,6 +77,12 @@ main {
   }
 }
 
+.Vacancy-description {
+  width: 60%;
+  margin: 50px auto;
+  font-size: 1.8rem;
+}
+
 .VacanciesApplied-title {
   margin: 30px 0;
   font-family: $font-bebas;
