--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -1,4 +1,31 @@
-.container_Header { 
-    grid-area: header;
-    background-color: blue;
+.Header { 
+    &-container {
+        position: fixed;
+        grid-area: header;
+        display: flex;
+        height: 70px;
+        padding: 15px;
+        background-color: blue;
+        align-items: center;
+        justify-content: space-between;
+        top: 0;
+        left: 0;
+        right: 0;
+    }
+    &-logo {
+        width: 150px;
+        object-fit: cover;
+    }
+    &-user {
+        display: flex;
+        place-content: center;
+        img {
+            width: 50px;
+            height: 50px;
+            object-fit: cover;
+        }
+        h1 {
+            margin-left: 10px;
+        }
+    }
 }
