--- a/src/assets/styles/_sidebarMenu.scss
+++ b/src/assets/styles/_sidebarMenu.scss
@@ -17,12 +17,16 @@
           background: rgba(60, 60, 60, .5);
         }
         a {
-          display: block;
+          display: flex;
           width: 100%;
           padding: 5px;
           color: black;
           font-size: 2rem;
           text-decoration: none;
+          align-items: center;
+        }
+        img {
+          margin-right: 10px;
         }
       }
     }
