[Add] Platzi color vars

--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -1,2 +1,8 @@
 $font-bebas: 'Bebas Neue', cursive;
 $font-lato: 'Lato', sans-serif;
+
+$c-greenPlatzi: #98CA3F;
+$c-bgDarkMode: #121F3D;
+$c-links: #0791E6;
+$c-grayLigth: #D9DFE6;
+$c-grayDark: #223354;
