--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -5,7 +5,8 @@
         display: flex;
         height: 70px;
         padding: 15px;
-        background-color: blue;
+        background-color: white;
+        border-bottom: 2px solid rgb(225, 225, 225);
         align-items: center;
         justify-content: space-between;
         top: 0;
@@ -20,12 +21,15 @@
         display: flex;
         place-content: center;
         img {
-            width: 50px;
-            height: 50px;
+            width: 45px;
+            height: 45px;
             object-fit: cover;
         }
         h1 {
             margin-left: 10px;
+        }
+        &:hover {
+            cursor: pointer;
         }
     }
 }
