--- a/src/assets/styles/_studentsList.scss
+++ b/src/assets/styles/_studentsList.scss
@@ -9,7 +9,9 @@
     width: 90%;
     margin: 20px auto 0;
     padding: 15px 10px;
-    background-color: rgba(83, 83, 83, .5);
+    background-color: #fcfeff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px lighten($color: #191616, $amount: 80);
     text-decoration: none;
     align-items: center;
     img {
