--- a/src/assets/styles/components/HeaderVacancy.scss
+++ b/src/assets/styles/components/HeaderVacancy.scss
@@ -5,13 +5,15 @@
     display: flex;
     width: 100%;
     height: 180px;
-    padding: 15px;
-    background-color: rgba(93, 93, 93, .6);
+    padding: 15px 25px;
+    background: linear-gradient(100deg, $c-bgDarkMode 60%, $c-grayDark);
+    color: white;
     flex-direction: column;
     justify-content: space-around;
   }
   &-title {
     font-family: $font-bebas;
+    letter-spacing: .12rem;
   }
   &-sectionOne,
   &-sectionTwo,
@@ -37,6 +39,7 @@
   }
   &-modality {
     padding: 3px 15px 5px;
+    color: black;
     background-color: white;
     border-radius: 20px;
   }
@@ -45,9 +48,16 @@
       width: 150px;
       height: 40px;
       margin-left: 20px;
-      border: none;
+      background-color: rgb(224, 29, 29);
       font-family: $font-lato;
       font-size: 1.6rem;
+      font-weight: 700;
+      border-radius: 4px;
+      border: none;
+      &.ok {
+        background-color: $c-greenPlatzi;
+        color: #191616;
+      }
       &:hover {
         cursor: pointer;
       }
