--- a/src/assets/styles/components/VacancyCard.scss
+++ b/src/assets/styles/components/VacancyCard.scss
@@ -7,8 +7,10 @@
     min-height: 140px;
     margin: 20px auto;
     padding: 15px;
-    background-color: rgba(0, 0, 0, .3);
+    background-color: #fcfeff;
     color: black;
+    border-radius: 5px;
+    box-shadow: 0 0 5px lighten($color: #191616, $amount: 80);
     text-decoration: none;
     justify-content: space-between;
     flex-direction: column;
@@ -42,9 +44,13 @@
         width: 150px;
         height: 40px;
         margin-left: 20px;
+        background-color: $c-greenPlatzi;
+        color: #191616;
+        border-radius: 4px;
         border: none;
         font-family: $font-lato;
         font-size: 1.6rem;
+        font-weight: 700;
         &:hover {
           cursor: pointer;
         }
@@ -53,7 +59,8 @@
   }
   &-modality {
     padding: 3px 15px 5px;
-    background-color: white;
+    background-color: darken($color: white, $amount: 7.5);
+    border: 1px solid #191616;
     border-radius: 20px;
   }
 }
