--- a/src/assets/styles/containers/SidebarCoach.scss
+++ b/src/assets/styles/containers/SidebarCoach.scss
@@ -1,11 +1,42 @@
+@import '../vars';
+
 .SidebarCoach {
   &-container {
     grid-area: sidebar;
     position: fixed;
     width: 20%;
     height: calc(100vh - 70px);
-    background-color: rgba(83, 83, 83, .6);
+    background-color: white;
+    border-right: 2px solid rgb(225, 225, 225);
+    overflow-y: auto;
     top: 70px;
+  }
+  &-back {
+    button {
+      display: flex;
+      width: 100%;
+      height: 50px;
+      padding: 5px 10px;
+      background-color: transparent;
+      border: none;
+      border-bottom: 1px solid rgb(225, 225, 225);
+      font-size: 1.6rem;
+      font-weight: 700;
+      align-items: center;
+      transition: background .5s ease;
+      img {
+        width: 35px;
+        height: 35px;
+        margin-right: 20px;
+        padding: 3px;
+        background-color: rgb(221, 217, 217);
+        border-radius: 30px;
+      }
+      &:hover {
+        background: lighten($color: $c-grayLigth, $amount: 7.5);
+        cursor: pointer;
+      }
+    }
   }
   &-item {
     display: flex;
@@ -13,12 +44,14 @@
     min-height: 80px;
     color: black;
     padding: 10px;
-    border-bottom: 1px solid rgba(0, 0, 0, .5);
+    border-bottom: 1px solid rgb(225, 225, 225);
     text-decoration: none;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     &:hover {
+      background: lighten($color: $c-grayLigth, $amount: 7.5);
+      color: $c-links;
       text-decoration: underline;
     }
   }
