--- a/src/assets/styles/containers/VacanciesList.scss
+++ b/src/assets/styles/containers/VacanciesList.scss
@@ -12,8 +12,9 @@
     min-height: 90px;
     margin: 20px;
     padding: 10px;
-    border-left: 6px solid rgba(83, 83, 83, .6);
-    border-bottom: 6px solid rgba(83, 83, 83, .6);
+    background-color: #fcfeff;
+    border-left: 6px solid lighten($color: $c-bgDarkMode, $amount: 10);
+    border-bottom: 6px solid lighten($color: $c-bgDarkMode, $amount: 10);;
     align-items: center;
     justify-content: space-around;
     p {
@@ -22,9 +23,13 @@
     button {
       width: 120px;
       height: 30px;
+      background-color: $c-greenPlatzi;
+      color: #191616;
+      border-radius: 4px;
       border: none;
       font-family: $font-lato;
       font-size: 1.6rem;
+      font-weight: 700;
       &:hover {
         cursor: pointer;
       }
