--- a/src/assets/styles/components/HeaderVacancy.scss
+++ b/src/assets/styles/components/HeaderVacancy.scss
@@ -63,4 +63,26 @@
       }
     }
   }
+  &-message {
+    margin-bottom: 20px;
+    p {
+      margin: 15px 0;
+    }
+    &-btn {
+      display: block;
+      margin: 0 auto;
+      width: 250px;
+      height: 50px;
+      background-color: $c-greenPlatzi;
+      color: #191616;
+      font-family: $font-lato;
+      font-size: 1.6rem;
+      font-weight: 700;
+      border-radius: 4px;
+      border: none;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
 }
