--- a/src/assets/styles/components/Modal.scss
+++ b/src/assets/styles/components/Modal.scss
@@ -12,6 +12,7 @@
     position: fixed;
     width: 80%;
     min-height: 500px;
+    height: 500px;
     padding: 20px;
     background-color: white;
     border-radius: 4px;
@@ -23,8 +24,12 @@
   }
   &-content {
     position: relative;
+    display: flex;
     width: 100%;
     height: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   &-close {
     position: absolute;
